Adds app logo and link, privacy policy

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<html>
+<head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width'>
+  <title>Odsahin Software</title>
+  <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+</head>
+
+<body>
+We provide fun little apps for you to enjoy on your mobile devices.
+</p><hr><p>
+
+<div>
+<a href="https://play.google.com/store/apps/details?id=com.odsahin.dotdisplay">
+  <img src="app_logo.webp" aria-hidden="true" alt="Icon image" itemprop="image">
+  <div>LED Dot Display</div>
+</a>
+</div>
+
+</p><hr><p><a href="privacy.html" target="_blank">Privacy Policy</a></p>
+</body>
+</html>
